Finishing the html and css

--- a/index.html
+++ b/index.html
@@ -7,74 +7,137 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>Frontend Mentor | Time tracking dashboard</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
 
-  Report for
-  Jeremy Robson
+  <main class="main-container">
+    <section class="profile-section">
 
-  Daily
-  Weekly
-  Monthly
+      <div class="profile-card">
+        <div class="profile-card__user">
+          <img class="profile-card__image" src="./images/image-jeremy.png" alt="">
+          <div>
+            <p class="profile-card__title">Report for</p>
+            <p class="profile-card__name">Jeremy Robson</p>
+          </div>
+        </div>
 
-  Work
-  5hrs <!-- daily -->
-  Previous - 7hrs <!-- daily -->
-  32hrs <!-- weekly -->
-  Previous - 36hrs <!-- weekly -->
-  103hrs <!-- monthly -->
-  Previous - 128hrs <!-- monthly -->
+        <div class="profile-card__dates">
+          <p id="daily" class="profile-card__frequency profile-card__frecuency--active">Daily</p>
+          <p id="weekly" class="profile-card__frequency">Weekly</p>
+          <p id="monthly" class="profile-card__frequency">Monthly</p>
+        </div>
+      </div>
+    </section>
 
-  Play
-  1hr <!-- daily -->
-  Previous - 2hrs <!-- daily -->
-  10hrs <!-- weekly -->
-  Previous - 8hrs <!-- weekly -->
-  23hrs <!-- monthly -->
-  Previous - 29hrs <!-- monthly -->
+    <section class="information-section">
 
-  Study
-  0hrs <!-- daily -->
-  Previous - 1hr <!-- daily -->
-  4hrs <!-- weekly -->
-  Previous - 7hrs <!-- weekly -->
-  13hrs <!-- monthly -->
-  Previous - 19hrs <!-- monthly -->
+      <div class="card">
+        <div class="card__background">
+          <img class="card__image" src="./images/icon-work.svg" alt="">
+        </div>
+        <div class="card__details">
+          <div class="card__activity">
+            <p class="card__title">Work</p>
+            <img class="card__dots" src="./images/icon-ellipsis.svg" alt="three dots">
+          </div>
+          <div class="card__time">
+            <p class="card__hour">5hrs</p>
+            <p class="card__previous">Previous - 7hrs</p>
+          </div>
+        </div>
+      </div>
 
-  Exercise
-  1hr <!-- daily -->
-  Previous - 1hr <!-- daily -->
-  4hrs <!-- weekly -->
-  Previous - 5hrs <!-- weekly -->
-  11hrs <!-- monthly -->
-  Previous - 18hrs <!-- monthly -->
+      <div class="card">
+        <div class="card__background">
+          <img class="card__image" src="./images/icon-work.svg" alt="">
+        </div>
+        <div class="card__details">
+          <div class="card__activity">
+            <p class="card__title">Work</p>
+            <img class="card__dots" src="./images/icon-ellipsis.svg" alt="three dots">
+          </div>
+          <div class="card__time">
+            <p class="card__hour">5hrs</p>
+            <p class="card__previous">Previous - 7hrs</p>
+          </div>
+        </div>
+      </div>
 
-  Social
-  1hr <!-- daily -->
-  Previous - 3hrs <!-- daily -->
-  5hrs <!-- weekly -->
-  Previous - 10hrs <!-- weekly -->
-  21hrs <!-- monthly -->
-  Previous - 23hrs <!-- monthly -->
+      <div class="card">
+        <div class="card__background">
+          <img src="./images/icon-work.svg" alt="">
+        </div>
+        <div class="card__details">
+          <div class="card__activity">
+            <p class="card__title">Work</p>
+            <img class="card__dots" src="./images/icon-ellipsis.svg" alt="three dots">
+          </div>
+          <div class="card__time">
+            <p class="card__hour">5hrs</p>
+            <p class="card__previous">Previous - 7hrs</p>
+          </div>
+        </div>
+      </div>
 
-  Self Care
-  0hrs <!-- daily -->
-  Previous - 1hr <!-- daily -->
-  2hrs <!-- weekly -->
-  Previous - 2hrs <!-- weekly -->
-  7hrs <!-- monthly -->
-  Previous - 11hrs <!-- monthly -->
+      <div class="card">
+        <div class="card__background">
+          <img src="./images/icon-work.svg" alt="">
+        </div>
+        <div class="card__details">
+          <div class="card__activity">
+            <p class="card__title">Work</p>
+            <img src="./images/icon-ellipsis.svg" alt="three dots">
+          </div>
+          <div class="card__time">
+            <p class="card__hour">5hrs</p>
+            <p class="card__previous">Previous - 7hrs</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="card">
+        <div class="card__background">
+          <img src="./images/icon-work.svg" alt="">
+        </div>
+        <div class="card__details">
+          <div class="card__activity">
+            <p class="card__title">Work</p>
+            <img src="./images/icon-ellipsis.svg" alt="three dots">
+          </div>
+          <div class="card__time">
+            <p class="card__hour">5hrs</p>
+            <p class="card__previous">Previous - 7hrs</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="card">
+        <div class="card__background">
+          <img src="./images/icon-work.svg" alt="">
+        </div>
+        <div class="card__details">
+          <div class="card__activity">
+            <p class="card__title">Work</p>
+            <img src="./images/icon-ellipsis.svg" alt="three dots">
+          </div>
+          <div class="card__time">
+            <p class="card__hour">5hrs</p>
+            <p class="card__previous">Previous - 7hrs</p>
+          </div>
+        </div>
+      </div>
+
+    </section>
+  </main>
 
   
-  <div class="attribution">
+  <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+    Coded by <a href="https://github.com/dudleydelgado" target="_blank">Dudley Delgado</a>.
+  </footer>
+
+  <script src="./main.js"></script>
 </body>
 </html>
