Finished the challenge, using html, css, javaScript and consuming data from a json file

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     <section class="information-section">
 
-      <div class="card">
+<!--       <div class="card">
         <div class="card__background">
           <img class="card__image" src="./images/icon-work.svg" alt="">
         </div>
@@ -47,87 +47,7 @@
             <p class="card__previous">Previous - 7hrs</p>
           </div>
         </div>
-      </div>
-
-      <div class="card">
-        <div class="card__background">
-          <img class="card__image" src="./images/icon-work.svg" alt="">
-        </div>
-        <div class="card__details">
-          <div class="card__activity">
-            <p class="card__title">Work</p>
-            <img class="card__dots" src="./images/icon-ellipsis.svg" alt="three dots">
-          </div>
-          <div class="card__time">
-            <p class="card__hour">5hrs</p>
-            <p class="card__previous">Previous - 7hrs</p>
-          </div>
-        </div>
-      </div>
-
-      <div class="card">
-        <div class="card__background">
-          <img src="./images/icon-work.svg" alt="">
-        </div>
-        <div class="card__details">
-          <div class="card__activity">
-            <p class="card__title">Work</p>
-            <img class="card__dots" src="./images/icon-ellipsis.svg" alt="three dots">
-          </div>
-          <div class="card__time">
-            <p class="card__hour">5hrs</p>
-            <p class="card__previous">Previous - 7hrs</p>
-          </div>
-        </div>
-      </div>
-
-      <div class="card">
-        <div class="card__background">
-          <img src="./images/icon-work.svg" alt="">
-        </div>
-        <div class="card__details">
-          <div class="card__activity">
-            <p class="card__title">Work</p>
-            <img src="./images/icon-ellipsis.svg" alt="three dots">
-          </div>
-          <div class="card__time">
-            <p class="card__hour">5hrs</p>
-            <p class="card__previous">Previous - 7hrs</p>
-          </div>
-        </div>
-      </div>
-
-      <div class="card">
-        <div class="card__background">
-          <img src="./images/icon-work.svg" alt="">
-        </div>
-        <div class="card__details">
-          <div class="card__activity">
-            <p class="card__title">Work</p>
-            <img src="./images/icon-ellipsis.svg" alt="three dots">
-          </div>
-          <div class="card__time">
-            <p class="card__hour">5hrs</p>
-            <p class="card__previous">Previous - 7hrs</p>
-          </div>
-        </div>
-      </div>
-
-      <div class="card">
-        <div class="card__background">
-          <img src="./images/icon-work.svg" alt="">
-        </div>
-        <div class="card__details">
-          <div class="card__activity">
-            <p class="card__title">Work</p>
-            <img src="./images/icon-ellipsis.svg" alt="three dots">
-          </div>
-          <div class="card__time">
-            <p class="card__hour">5hrs</p>
-            <p class="card__previous">Previous - 7hrs</p>
-          </div>
-        </div>
-      </div>
+      </div> -->
 
     </section>
   </main>
@@ -138,6 +58,6 @@
     Coded by <a href="https://github.com/dudleydelgado" target="_blank">Dudley Delgado</a>.
   </footer>
 
-  <script src="./main.js"></script>
+  <script type="module" src="./main.js"></script>
 </body>
 </html>
